Update 03.Basic Genome Analysis.md

--- a/03.Basic Genome Analysis.md
+++ b/03.Basic Genome Analysis.md
@@ -11,10 +11,11 @@ The summary output of `BUSCO` reveals the number of complete, fragmented, duplic
 ```
 
 #### Repeat content
-tttt
+`RepeatMasker` allows the identification of known transposable elements and simple repetitive DNA. It also masks repetitive sequences.
 ```ShellSession
 RepeatMasker -pa 8 -species fungi -gff -dir $HOME/RepeatMasker Mysul_MySu01_v1.fa
 ```
+Note that I ran `RepeatMasker` with RepBase-20170127 and using version 4.0.7, since I lack access to later RepBase versions. 
 
 `RepeatMasker` produces a GFF file of repeat elements, a genome file where repetitive elements are masked, and an output table looking like this:
 ```
