Update and rename 03.a.Annotation.md to 04.Annotation.md

--- a/04.Annotation.md
+++ b/04.Annotation.md
@@ -1,19 +1,16 @@
-Proper gene annotation of a newly sequenced genome requires masking of repetitive elements (transposons), then automated gene prediction, followed by manual curation. Tools for gene prediction include `augustus`, `MAKER2`, and `BRAKER1`. 
+Proper gene annotation of a newly sequenced genome requires masking of repetitive elements (transposons), then automated gene prediction, followed by manual curation. Tools for gene prediction include `Augustus` and `BRAKER`. 
 
-### Masking repeats with `repeatmasker`
-
+### Masking repeats with `RepeatMasker`
 This step is important to label transposable elements that might mess up the annotation, and additionally can provide information about the nature and distribution of different types of transposons. In the following line, the analysis was done for a fungal species. `RepeatMasker -h` provides a list of all functions. 
 ```ShellSession
-RepeatMasker -species Fungi -small -nolow -gff -dir PATH-for-RepeatMasker-directory/ PATH/genome.fa
+RepeatMasker -species fungi -small -nolow -dir PATH-for-RepeatMasker-directory/ PATH/genome.fa
 ```
-`-nolow` prevents masking of low complexity and simple repeats, and is optional. `-gff` generates an additional GFF output file, which is important for the manual annotation. `-small` returns masked sequence in lower case (standard is N, other options are available). The output will be a masked.fa fasta file meeting the settings, plus the GFF file, a .out file giving localization and statistics of each repeat, and a .tab file summarizing the results of the masking. 
+`-nolow` prevents masking of low complexity and simple repeats, `-small` returns masked sequence in lower case (standard is N, other options are available). The output will be a masked.fa fasta file. 
 
+### Gene prediction with `Augustus`
+A pretty extensive tutorial on the usage of `Augustus` can be found here: http://bioinf.uni-greifswald.de/augustus/binaries/tutorial/. Most `perl`-scripts are provided in the scripts/ folder of `Augustus`. 
 
-### Gene prediction with `augustus`
-
-A pretty extensive tutorial on the usage of `augustus` can be found here: http://bioinf.uni-greifswald.de/augustus/binaries/tutorial/. Most `perl`-scripts are provided in the scripts/ folder of `augustus`. 
-
-   - **training `augustus` with gene models**
+   - **training `Augustus` with gene models**
 
 **Note**: On the genotoul server, the following lines have to be run to activate the `augustus` module:
 ```ShellSession
@@ -21,7 +18,7 @@ module load compiler/gcc-4.9.1;
 export AUGUSTUS_CONFIG_PATH=/usr/local/bioinfo/src/augustus/augustus-3.2.3/config/
 ```
 
-Assuming that good gene annotation of a close relative is present, we can start training `augustus`. First, I generated a GeneBank file from the GFF containing the gene annotations, and produce a random training set of 100 genes, `ref_species.genes.gb.test`, and a training set `ref_species.genes.gb.train` excluding these genes:
+Assuming that good gene annotation of a close relative is present, we can start training `Augustus`. First, I generated a GeneBank file from the GFF containing the gene annotations, and produce a random training set of 100 genes, `ref_species.genes.gb.test`, and a training set `ref_species.genes.gb.train` excluding these genes:
 ```ShellSession
 perl PATH/gff2gbSmallDNA.pl ref_species.annotation.gff ref_species.genes.gb;
 perl PATH/randomSplit.pl ref_species.genes.gb 100
@@ -86,7 +83,7 @@ augustus --species=ref_species new_genome.masked.fa --extrinsicCfgFile=extrinsic
 The gene models can be extracted from the .gff as above. 
 
 
-### Gene prediction with `BRAKER1`
+### Gene prediction with `BRAKER`
 
    - ***ab initio* gene prediction**
 
