--- a/04.Annotation.md
+++ b/04.Annotation.md
@@ -3,7 +3,7 @@ Proper gene annotation of a newly sequenced genome requires masking of repetitiv
 ### Masking repeats with `RepeatMasker`
 This step is important to label transposable elements that might mess up the annotation, and additionally can provide information about the nature and distribution of different types of transposons. In the following line, the analysis was done for a fungal species. `RepeatMasker -h` provides a list of all functions. 
 ```ShellSession
-RepeatMasker -species fungi -small -nolow -dir PATH-for-RepeatMasker-directory/ PATH/genome.fa
+RepeatMasker -species fungi -small -nolow -dir RepMasker Mysul_MySu01_v1.fa
 ```
 `-nolow` prevents masking of low complexity and simple repeats, `-small` returns masked sequence in lower case (standard is N, other options are available). The output will be a masked.fa fasta file. 
 
@@ -12,37 +12,31 @@ A pretty extensive tutorial on the usage of `Augustus` can be found here: http:/
 
    - **training `Augustus` with gene models**
 
-**Note**: On the genotoul server, the following lines have to be run to activate the `augustus` module:
+Assuming that good gene annotation of a close relative is present, we can start training `Augustus`. Here, I used *Sclerotinia sclerotiorum* as reference. First, I generated a GeneBank file from the GFF containing the gene annotations, and produce a random training set of 100 genes, `Ssclerotiorum.genes.gb.test`, and a training set `Ssclerotiorum.genes.gb.train` excluding these genes:
 ```ShellSession
-module load compiler/gcc-4.9.1;
-export AUGUSTUS_CONFIG_PATH=/usr/local/bioinfo/src/augustus/augustus-3.2.3/config/
-```
-
-Assuming that good gene annotation of a close relative is present, we can start training `Augustus`. First, I generated a GeneBank file from the GFF containing the gene annotations, and produce a random training set of 100 genes, `ref_species.genes.gb.test`, and a training set `ref_species.genes.gb.train` excluding these genes:
-```ShellSession
-perl PATH/gff2gbSmallDNA.pl ref_species.annotation.gff ref_species.genes.gb;
-perl PATH/randomSplit.pl ref_species.genes.gb 100
+perl gff2gbSmallDNA.pl Ssclerotiorum.annotation.gff Ssclerotiorum.genes.gb;
+perl randomSplit.pl Ssclerotiorum.genes.gb 100
 ```
 Then, I generated a species file `ref_species`:
 ```ShellSession
-perl PATH/new_species.pl --species=ref_species
+perl PATH/new_species.pl --species=Ssclerotiorum
 ```
-The output file `ref_species_parameters.cfg` can be set to include protein and codingseq information, hints from RNA-Seq and UTR prediction. 
+The output file `Ssclerotiorum_parameters.cfg` can be set to include protein and codingseq information, hints from RNA-Seq and UTR prediction. 
 Next, an initial round of training can be done.
 ```ShellSession
-etraining --species=ref_species ref_species.genes.gb.train
+etraining --species=Ssclerotiorum Ssclerotiorum.genes.gb.train
 ```
 This updates the species file. Next, a first test is done with the gb.test file from above:
 ```ShellSession
-augustus --species=ref_species ref_species.genes.gb.test | tee firsttest.out
+augustus --species=Ssclerotiorum Ssclerotiorum.genes.gb.test | tee firsttest.out
 ```
 The result of this test can be read with the command below, where TP shows the number of correctly predicted genes, FN false negaties, FP false positives, sensitivity the percentage of correctly predicted exons, and specificity the percentage of exons exactly as in test set.
 ```ShellSession
 grep -A 22 Evaluation firsttest.out
 ```
-Next, we run the following lines to optimize prediction accuracy of `augustus`, and then re-train the program with `etraining` followed by testing the accuracy as above:
+Next, we run the following lines to optimize prediction accuracy of `Augustus`, and then re-train the program with `etraining` followed by testing the accuracy as above:
 ```ShellSession
-optimize_augustus.pl --species=ref_species ref_species.genes.gb.train #takes a long time
+optimize_augustus.pl --species=Ssclerotiorum Ssclerotiorum.genes.gb.train #takes a long time
 ```
 This should be done several times until the accuracy does not improve significantly any more. 
 
