--- a/04.Annotation.md
+++ b/04.Annotation.md
@@ -17,7 +17,7 @@ Assuming that good gene annotation of a close relative is present, we can start 
 perl gff2gbSmallDNA.pl Ssclerotiorum.annotation.gff Ssclerotiorum.genes.gb;
 perl randomSplit.pl Ssclerotiorum.genes.gb 100
 ```
-Then, I generated a species file `ref_species`:
+Then, I generated a reference species file `Ssclerotiorum`:
 ```ShellSession
 perl PATH/new_species.pl --species=Ssclerotiorum
 ```
@@ -43,36 +43,36 @@ This should be done several times until the accuracy does not improve significan
 
    - ***ab initio* gene prediction**
 
-Using the training database created above, `augustus` can be used to predict gene models *ab initio*. 
+Using the training database created above, `Augustus` can be used to predict gene models *ab initio*. 
 ```ShellSession
-augustus --species=ref_species new_genome.masked.fa --extrinsicCfgFile=extrinsic.ref_species.cfg > augustus.abinitio.gff
+augustus --species=Ssclerotiorum Mysul_MySu01_v1.fa.masked --extrinsicCfgFile=extrinsic.Ssclerotiorum.cfg > augustus.abinitio.gff
 ```
 This might take a moment to compute. The output is a .gff file containing information about putative gene models. The protein sequences can be extracted with 
 ```ShellSession
-perl PATH/augustus/augustus-3.2.3/scripts/getAnnoFasta.pl augustus.abinitio.gff
+perl $HOME/augustus/augustus-3.2.3/scripts/getAnnoFasta.pl augustus.abinitio.gff
 ```
 producing a file `augustus.abinitio.aa` in fasta format. To extract gene and CDS sequences, I used `gff2fasta.pl` from https://github.com/ISUgenomics/common_scripts/blob/master/gff2fasta.pl (save script with an editor like `nano`).
 ```ShellSession
-perl PATH/gff2fasta.pl new_genome.fa augustus.abinitio.gff output.prefix
+perl gff2fasta.pl Mysul_MySu01_v1.fa augustus.abinitio.gff Mysul_MySu01_v1.augustus-cds.fa
 ```
 Alternatively, the `gffread` package from `cufflinks` does the job:
 ```ShellSession
-gffread augustus.abinitio.gff -g new_genome.fa -w transcripts.fasta -y peptides.fasta
+gffread augustus.abinitio.gff -g Mysul_MySu01_v1.fa -w transcripts.fasta -y peptides.fasta
 ```
 
    - **including RNA-Seq for prediction**
 
-This requires a BAM and a WIG file(s) produced by mapping of your RNA-Seq against the new genome with a mapper like `STAR` or `HISAT2`. First, RNA-Seq hints have to be produced. There are many options specified in the manual that should be considered for optimization.
+This requires a BAM and a WIG file(s) produced by mapping of your RNA-seq against the new genome with a mapper like `STAR` or `HISAT2`. First, RNA-seq hints have to be produced. There are many options specified in the manual that should be considered for optimization.
 ```ShellSession
-cat PATH/rnaseq.wig | perl PATH/augustus/augustus-3.2.1/scripts/wig2hints.pl --width=10 --margin=10 --minthresh=2 --minscore=4 --src=W --type=ep --radius=4.5 > rnaseq.track.gff
+cat rnaseq-aligned.wig | perl $HOME/augustus/augustus-3.2.1/scripts/wig2hints.pl --width=10 --margin=10 --minthresh=2 --minscore=4 --src=W --type=ep --radius=4.5 > rnaseq.track.gff
 ```
-This script generates the file `extrinsic.new_species.cfg`, which can be adjusted (see manual for details!). For example, in the line exonpart, the last number can be set as bonus (>1) if the gene model is supported by the RNA-Seq data.
+This script generates the file `extrinsic.new_species.cfg`, which can be adjusted (see manual for details!). For example, in the line exonpart, the last number can be set as bonus (>1) if the gene model is supported by the RNA-seq data.
 ```Text
 exonpart        1     .997  M    1  1e+100  E 1    1  W 1    1.05
 ```
 Then, we can predict gene models:
 ```ShellSession
-augustus --species=ref_species new_genome.masked.fa --extrinsicCfgFile=extrinsic.new_species.cfg --hintsfile=hints.rnaseq.ep.gff > augustus.hints.abinitio.gff
+augustus --species=Ssclerotiorum Mysul_MySu01_v1.fa.masked --extrinsicCfgFile=extrinsic.new_species.cfg --hintsfile=hints.rnaseq.ep.gff > augustus.hints.abinitio.gff
 ```
 The gene models can be extracted from the .gff as above. 
 
@@ -81,7 +81,7 @@ The gene models can be extracted from the .gff as above.
 
    - ***ab initio* gene prediction**
 
-`BRAKER` requires both a reference gene set and RNA-Seq data, and you need to refer to `Genemark`, `bamtools` and `samtools` binaries:
+`BRAKER` requires both a reference gene set and RNA-seq data, and you need to refer to `Genemark`, `bamtools` and `samtools` binaries:
 ```ShellSession
-perl PATH/BRAKER/BRAKER_v1.9/braker.pl --cores=8 --fungus --GENEMARK_PATH=PATH/bin/gm_et_linux_64/gmes_petap --BAMTOOLS_PATH=PATH/bamtools/pezmaster31-bamtools-6708a21/bin --SAMTOOLS_PATH=PATH/samtools/samtools-1.3.2 --overwrite --useexisting --species=ref_species --genome=PATH/new_genome.masked.fa --bam=PATH/sortedByCoord.out.bam
+perl PATH/BRAKER/BRAKER_v1.9/braker.pl --cores=8 --fungus --GENEMARK_PATH=$HOME/bin/gm_et_linux_64/gmes_petap --BAMTOOLS_PATH=$HOME/bin/bamtools/pezmaster31-bamtools-6708a21/bin --SAMTOOLS_PATH=$HOME/bin/samtools/samtools-1.3.2 --overwrite --useexisting --species=Ssclerotiorum --genome=Mysul_MySu01_v1.fa.masked --bam=RNA-seq.MySu01_v1.aligned.bam
 ```
