--- a/01.Genome-Assembly.md
+++ b/01.Genome-Assembly.md
@@ -16,7 +16,7 @@ java -jar $HOME/bin/trimmomatic-0.36.jar PE -threads 8 -trimlog log-file 160316_
 2 - I mapped the reads onto the draft assembly with `HISAT2`.
 ```ShellSession
 hisat2-build MySu_canu-v0_contigs.fasta MySu_canu-v0_index
-hisat2 -p 8 ----no-spliced-alignment -k 10 -x MySu_canu-v0_index -1 HZE11_R1_trim.fq.gz -2 HZE11_R2_trim.fq.gz -S MySu_canu-v0.HZE11-map.sam
+hisat2 -p 8 --no-spliced-alignment -k 10 -x MySu_canu-v0_index -1 HZE11_R1_trim.fq.gz -2 HZE11_R2_trim.fq.gz -S MySu_canu-v0.HZE11-map.sam
 ```
 3 - Parsing the BAM file. 
 ```ShellSession
