--- a/05.WebApollo_curation.md
+++ b/05.WebApollo_curation.md
@@ -1,24 +1,25 @@
 This document is meant to summarize what input material I used and how I parsed the files to upload to an instance of `WebApollo`. 
 
-### Input data
-## *Ab initio* gene predictions
+## Input data
+#### *Ab initio* gene predictions
 text
 
-## Repeat landscape
+#### Repeat landscape
 text
 
-## BLAST similarities
+#### BLAST similarities
 text
 
-## RNA-seq coverage
+#### RNA-seq coverage
 text
 
-## RNA-seq reads
+### RNA-seq reads
 text
 
-### Initializing genome in `WebApollo`
-## Setting up the genome
+## Initializing genome in `WebApollo`
+#### Setting up the genome
+Text
 
-
-### Uploading data
-## Annotations (Repeats, gene predictions, BLAST)
+## Uploading data
+#### Annotations (Repeats, gene predictions, BLAST)
+Text
