--- a/05.WebApollo_curation.md
+++ b/05.WebApollo_curation.md
@@ -37,4 +37,9 @@ Text
 
 ## Uploading data
 #### Annotations (Repeats, gene predictions, BLAST)
-Text
+In the Apollo directory, the annotations can be uploaded with the supplied scripts (`WebApollo-2.0.6`). The gene annotations were uploaded like this:
+```ShellSession
+bin/flatfile-to-json.pl -gff $HOME/data/MySu01_BRAKER-Augustus.gff3 --type mRNA -tracklabel BRAKER-Augustus --out ~/opt/Apollo-2.0.6/data_mysul/
+bin/flatfile-to-json.pl -gff $HOME/data/MySu01_BRAKER-genemark.gff3 --type mRNA -tracklabel BRAKER-Genemark --out ~/opt/Apollo-2.0.6/data_mysul/
+```
+
