--- a/05.WebApollo_curation.md
+++ b/05.WebApollo_curation.md
@@ -42,4 +42,11 @@ In the Apollo directory, the annotations can be uploaded with the supplied scrip
 bin/flatfile-to-json.pl -gff $HOME/data/MySu01_BRAKER-Augustus.gff3 --type mRNA -tracklabel BRAKER-Augustus --out ~/opt/Apollo-2.0.6/data_mysul/
 bin/flatfile-to-json.pl -gff $HOME/data/MySu01_BRAKER-genemark.gff3 --type mRNA -tracklabel BRAKER-Genemark --out ~/opt/Apollo-2.0.6/data_mysul/
 ```
-
+The Repeat landscape from `RepeatMasker` was uploaded as follows:
+```ShellSession
+bin/flatfile-to-json.pl -gff $HOME/data/MySu01_v1.RepeatMasker.gff --type similarity -tracklabel RepeatMasker --out ~/opt/Apollo-2.0.6/data_mysul/
+```
+BLAST results were added:
+```ShellSession
+bin/flatfile-to-json.pl -gff $HOME/data/MySu01.BLASTN.gff --type match_part -tracklabel BLASTN --out ~/opt/Apollo-2.0.6/data_mysul/
+```
