--- a/05.WebApollo_curation.md
+++ b/05.WebApollo_curation.md
@@ -33,7 +33,10 @@ text
 
 ## Initializing genome in `WebApollo`
 #### Setting up the genome
-Text
+First, a directory for the new genome has to be set-up with `mkdir ~/opt/Apollo-2.0.6/data_mysul`. Then, for uploading the genome:
+```ShellSession
+bin/prepare-refseqs.pl --fasta $HOME/data/Mysul_MySu01_v1.fa --out ~/opt/Apollo-2.0.6/data_mysul/
+```
 
 ## Uploading data
 #### Annotations (Repeats, gene predictions, BLAST)
