--- a/05.WebApollo_curation.md
+++ b/05.WebApollo_curation.md
@@ -20,7 +20,16 @@ tig00000001	GeneMark.hmm	CDS	147	865	.	+	2	Parent=1_t
 ```
 
 #### Repeat landscape
-text
+The standard gff output file from `RepeatMasker` is already readable for `WebApollo`, but a little parsing is advised to make names of elements readable too. 
+```ShellSession
+sed 's/Target "/Name=/g' Mysul_MySu01_v1.fa.out.gff | sed 's/"//g' > MySu01_v1.RepeatMasker.gff
+```
+This gives a gff table looking like this:
+```
+tig00000001	RepeatMasker	similarity	1733	1779	15.5	+	.	Name=Motif:(CCATCC)n 1 48
+tig00000001	RepeatMasker	similarity	1895	1932	19.1	+	.	Name=Motif:(AACAA)n 1 37
+tig00000001	RepeatMasker	similarity	2058	2089	13.7	+	.	Name=Motif:(CCAAAT)n 1 32
+```
 
 #### BLAST similarities
 text
