--- a/05.WebApollo_curation.md
+++ b/05.WebApollo_curation.md
@@ -32,7 +32,17 @@ tig00000001	RepeatMasker	similarity	2058	2089	13.7	+	.	Name=Motif:(CCAAAT)n 1 32
 ```
 
 #### BLAST similarities
-text
+Using BLAST to identify locations in the new genome with similarity to known genes can be a very useful hint, which is why I used published proteomes for a BLASTN against the new genome of *Myriosclerotinia sulcatula*, using the `NCBI BLAST+` package. 
+```ShellSession
+makeblastdb -in Mysul_MySu01_v1.fa -dbtype nucl -out MySu01_v1 -title "Msulcatula genome" # to create local database of Myriosclerotinia genome
+blastn -evalue 1e-50 -query botrytis_cinerea_B05.10_transcripts.fasta -db $HOME/database/BLAST/MySu01_v1 -outfmt 6 -out Mysul_MySu01_v1_blastn_Bcinerea.tbl -num_threads 48
+blastn -evalue 1e-50 -query Ssclerotiorum_1980_CDS.fa -db $HOME/database/BLAST/MySu01_v1 -outfmt 6 -out Mysul_MySu01_v1_blastn_Ss1980.tbl -num_threads 48
+```
+The BLAST results need to be parsed to gff so that `WebApollo` can visualize them. 
+```ShellSession
+cat Mysul_MySu01_v1_blastn_Bcinerea.tbl Mysul_MySu01_v1_blastn_Ss1980.tbl > Mysul_MySu01_v1_blastn_Sclerotiniaceae.tbl # combine BLAST results
+blast2gff.py -b Mysul_MySu01_v1_blastn_Sclerotiniaceae.tbl > Mysul_MySu01_v1_blastn_Sclerotiniaceae.gff
+```
 
 #### RNA-seq coverage
 text
