Update 03.Basic Genome Analysis.md

--- a/03.Basic Genome Analysis.md
+++ b/03.Basic Genome Analysis.md
@@ -7,7 +7,14 @@ python $HOME/miniconda3/bin/BUSCO.py -f --out MySu01_v1.busco --in Mysul_MySu01_
 
 The summary output of `BUSCO` reveals the number of complete, fragmented, duplicated, and missing core genes of the selected lineage, here ascomycota_odb9.
 ```
+C:97.6%[S:97.6%,D:0.0%],F:1.0%,M:1.4%,n:1315
 
+	1284	Complete BUSCOs (C)
+	1284	Complete and single-copy BUSCOs (S)
+	0	Complete and duplicated BUSCOs (D)
+	13	Fragmented BUSCOs (F)
+	18	Missing BUSCOs (M)
+	1315	Total BUSCO groups searched
 ```
 
 #### Repeat content
