--- a/04.Annotation.md
+++ b/04.Annotation.md
@@ -60,7 +60,7 @@ Alternatively, the `gffread` package from `cufflinks` does the job:
 gffread augustus.abinitio.gff -g Mysul_MySu01_v1.fa -w transcripts.fasta -y peptides.fasta
 ```
 
-   - **including RNA-Seq for prediction**
+   - **including RNA-seq for prediction**
 
 This requires a BAM and a WIG file(s) produced by mapping of your RNA-seq against the new genome with a mapper like `STAR` or `HISAT2`. First, RNA-seq hints have to be produced. There are many options specified in the manual that should be considered for optimization.
 ```ShellSession
