--- a/05.WebApollo_curation.md
+++ b/05.WebApollo_curation.md
@@ -44,11 +44,25 @@ cat Mysul_MySu01_v1_blastn_Bcinerea.tbl Mysul_MySu01_v1_blastn_Ss1980.tbl > Mysu
 blast2gff.py -b Mysul_MySu01_v1_blastn_Sclerotiniaceae.tbl > Mysul_MySu01_v1_blastn_Sclerotiniaceae.gff
 ```
 
-#### RNA-seq coverage
-text
-
 #### RNA-seq reads
-text
+First, I mapped available RNA-seq data to the new genome Mysul_MySu01_v1.fa using `HISAT2`. RNA-seq raw data was trimmed via `Trimmomatic-0.36`. 
+```ShellSession
+hisat2-build Mysul_MySu01_v1.fa MySu01_index #for the index
+hisat2 -p 8 --max-intronlen 500 -k 10 -x MySu01_index -1 AOPH-72_R1_trim.fq.gz -2 AOPH-72_R2_trim.fq.gz -S AOPH-72.sam
+```
+I parsed the file to bam format and to remove non-aligned reads.
+```ShellSession
+samtools sort -l 0 -o AOPH-72.bam -O bam AOPH-72.sam
+samtools view -F 0x04 -b AOPH-72.bam > AOPH-72.aligned.bam
+samtools index -b AOPH-72.aligned.bam
+```
+
+#### RNA-seq coverage
+To visualize RNA-seq coverage in the `WebApollo` browser, I created a bigwig file using `bedtools2` and the UCSC script `bedGraphToBigWig`. 
+```ShellSession
+genomeCoverageBed -split -bg -ibam AOPH-72.aligned.bam -g Mysul_MySu01_v1.fa.fai | sort -k1,1 -k2,2n > AOPH-72.aligned.bedgraph
+bedGraphToBigWig AOPH-72.aligned.bedgraph Mysul_MySu01_v1.fa.fai AOPH-72.aligned.bw
+```
 
 ## Initializing genome in `WebApollo`
 #### Setting up the genome
