--- a/04.Annotation.md
+++ b/04.Annotation.md
@@ -7,11 +7,8 @@ RepeatMasker -species fungi -small -nolow -dir RepMasker Mysul_MySu01_v1.fa
 ```
 `-nolow` prevents masking of low complexity and simple repeats, `-small` returns masked sequence in lower case (standard is N, other options are available). The output will be a masked.fa fasta file. 
 
-### Gene prediction with `Augustus`
+### Training `Augustus`
 A pretty extensive tutorial on the usage of `Augustus` can be found here: http://bioinf.uni-greifswald.de/augustus/binaries/tutorial/. Most `perl`-scripts are provided in the scripts/ folder of `Augustus`. 
-
-   - **training `Augustus` with gene models**
-
 Assuming that good gene annotation of a close relative is present, we can start training `Augustus`. Here, I used *Sclerotinia sclerotiorum* as reference. First, I generated a GeneBank file from the GFF containing the gene annotations, and produce a random training set of 100 genes, `Ssclerotiorum.genes.gb.test`, and a training set `Ssclerotiorum.genes.gb.train` excluding these genes:
 ```ShellSession
 perl gff2gbSmallDNA.pl Ssclerotiorum.annotation.gff Ssclerotiorum.genes.gb;
@@ -40,46 +37,7 @@ optimize_augustus.pl --species=Ssclerotiorum Ssclerotiorum.genes.gb.train #takes
 ```
 This should be done several times until the accuracy does not improve significantly any more. 
 
-
-   - ***ab initio* gene prediction**
-
-Using the training database created above, `Augustus` can be used to predict gene models *ab initio*. 
-```ShellSession
-augustus --species=Ssclerotiorum Mysul_MySu01_v1.fa.masked --extrinsicCfgFile=extrinsic.Ssclerotiorum.cfg > augustus.abinitio.gff
-```
-This might take a moment to compute. The output is a .gff file containing information about putative gene models. The protein sequences can be extracted with 
-```ShellSession
-perl $HOME/augustus/augustus-3.2.3/scripts/getAnnoFasta.pl augustus.abinitio.gff
-```
-producing a file `augustus.abinitio.aa` in fasta format. To extract gene and CDS sequences, I used `gff2fasta.pl` from https://github.com/ISUgenomics/common_scripts/blob/master/gff2fasta.pl (save script with an editor like `nano`).
-```ShellSession
-perl gff2fasta.pl Mysul_MySu01_v1.fa augustus.abinitio.gff Mysul_MySu01_v1.augustus-cds.fa
-```
-Alternatively, the `gffread` package from `cufflinks` does the job:
-```ShellSession
-gffread augustus.abinitio.gff -g Mysul_MySu01_v1.fa -w transcripts.fasta -y peptides.fasta
-```
-
-   - **including RNA-seq for prediction**
-
-This requires a BAM and a WIG file(s) produced by mapping of your RNA-seq against the new genome with a mapper like `STAR` or `HISAT2`. First, RNA-seq hints have to be produced. There are many options specified in the manual that should be considered for optimization.
-```ShellSession
-cat rnaseq-aligned.wig | perl $HOME/augustus/augustus-3.2.1/scripts/wig2hints.pl --width=10 --margin=10 --minthresh=2 --minscore=4 --src=W --type=ep --radius=4.5 > rnaseq.track.gff
-```
-This script generates the file `extrinsic.new_species.cfg`, which can be adjusted (see manual for details!). For example, in the line exonpart, the last number can be set as bonus (>1) if the gene model is supported by the RNA-seq data.
-```Text
-exonpart        1     .997  M    1  1e+100  E 1    1  W 1    1.05
-```
-Then, we can predict gene models:
-```ShellSession
-augustus --species=Ssclerotiorum Mysul_MySu01_v1.fa.masked --extrinsicCfgFile=extrinsic.new_species.cfg --hintsfile=hints.rnaseq.ep.gff > augustus.hints.abinitio.gff
-```
-The gene models can be extracted from the .gff as above. 
-
-
 ### Gene prediction with `BRAKER`
-
-   - ***ab initio* gene prediction**
 
 `BRAKER` requires both a reference gene set and RNA-seq data, and you need to refer to `Genemark`, `bamtools` and `samtools` binaries:
 ```ShellSession
